--- a/webapp/view/user/login.phtml
+++ b/webapp/view/user/login.phtml
@@ -32,43 +32,33 @@ use ArmoredCore\WebObjects\URL;
 </head>
 
 <body>
-    <form style="background-color:grey; margin-left: 35%;margin-top: 18%; width: 30%; border: solid 1px" method="post" action="<?=Url::toRoute('user/store')?>">
+    <form style="background-color:grey; margin-left: 35%;margin-top: 20%; width: 30%; border: solid 1px" method="post" action="<?=Url::toRoute('user/store')?>">
         <div class="row">
             <div class="col-md-4">
                 <h3>Dados de Acesso</h3>
-                 <input type="text" class="form-control" name="username" placeholder="Username">
+                 <input type="text" class="form-control" name="username" placeholder="Username"><br>
+                 <input type="text" class="form-control" name="password" placeholder="Password">
             </div>
-
-            <div class="col-md-4">
-                <h3>Dados Pessoais</h3>
-                <input type="text" class="form-control" name="nome" placeholder="Nome">
-            </div>
-            <div class="col-md-4" style="margin-top: 74px">
-                <input type="text" class="form-control" name="nif" placeholder="Nif">
-            </div>
-        </div><br>
-        <div class="row">
+        </div>
+            
+            <div class="row">
             <div class="col-md-4">
                 <input type="text" class="form-control" name="password" placeholder="Password">
             </div>
-            <div class="col-md-4">
-                <input type="text" class="form-control" name="morada" placeholder="Morada">
-            </div>
-            <div class="col-md-4">
-                <input type="text" class="form-control" name="telefone" placeholder="Telefone">
-            </div>
-        </div><br>
-        <div class="row">
+            </div><br>
+            <div class="row">
             <div class="col-md-4">
                 <input type="hidden" class="form-control" name="id_perfil" value="1">
             </div>
             <div class="col-md-4">
-                <input style="margin-left: 50px" type="submit" class="btn btn-success" value="Registar">
+                <input style="margin-left: 50px" type="submit" class="btn btn-success" value="Login">
             </div>
             <div class="col-md-4">
 
             </div>
         </div>
+            
+
+           
 
     </form>
-
