--- a/webapp/view/layout/indexheader.phtml
+++ b/webapp/view/layout/indexheader.phtml
@@ -55,6 +55,7 @@ use ArmoredCore\WebObjects\URL;
                 </li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a class="btn" href="<?= URL::toRoute('user/create')?>">SIGN IN / SIGN UP</a></li>
+                <li><a class="btn" href="<?= URL::toRoute('user/login')?>">SIGN IN</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
