--- a/webapp/view/home/index.phtml
+++ b/webapp/view/home/index.phtml
@@ -2,7 +2,23 @@
 use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
-Layout::includeLayout('indexheader'); ?>
+
+if(!isset($_SESSION['perfil'])){
+    Layout::includeLayout('nologinnav');
+}
+else if($_SESSION['perfil']==1){
+    Layout::includeLayout('usernav');
+}
+else if($_SESSION['perfil']==2){
+    Layout::includeLayout('adminnav');
+}
+else if($_SESSION['perfil']==3){
+    Layout::includeLayout('gestornav');
+}
+else if($_SESSION['perfil']==4){
+    Layout::includeLayout('operadorNav');
+}?>
+
 
 
 
