--- a/webapp/view/home/index.phtml
+++ b/webapp/view/home/index.phtml
@@ -9,17 +9,80 @@ if(!isset($_SESSION['perfil'])){
 else if($_SESSION['perfil']==1){
     Layout::includeLayout('usernav');
 }
-else if($_SESSION['perfil']==2){
-    Layout::includeLayout('adminnav');
-}
-else if($_SESSION['perfil']==3){
-    Layout::includeLayout('gestornav');
-}
-else if($_SESSION['perfil']==4){
-    Layout::includeLayout('operadorNav');
-}?>
+?>
 
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="<?= Asset::css('/index.css')?>">
+</head>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
 
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img id="image1" src="<?=Asset::image('newYork.jpg')?>" alt="NewYork">
+            </div>
+
+            <div class="item">
+                <img id="image2" src="<?=Asset::image('chicago.jpg')?>" alt="Chicago">
+            </div>
+
+            <div class="item">
+                <img id="image3" src="<?=Asset::image('la.jpg')?>" alt="Los Angeles">
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <form>
+        <input type="radio" id="rbOrigemDestino" name="rbOrigemDestino" checked>
+        Por origem e destino
+
+        <input type="radio" id="rbData" name="rbData">
+        Por data
+
+        <br><br>
+
+       <select>
+           <option>Partida</option>
+           <option>1</option>
+           <option>2</option>
+           <option>3</option>
+       </select>
+        <select id="chegada">
+            <option>Chegada</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+        </select>
+        <select id="data">
+            <option>Data</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+        </select>
+        <br><br>
+        <input type="submit" class="btn btn-success" value="Pesquisar" id="pesquisar">
+    </form>
 
 
 <?php Layout::includeLayout('footer')?>
