--- a/webapp/view/voo/gestaoVoos.phtml
+++ b/webapp/view/voo/gestaoVoos.phtml
@@ -12,8 +12,8 @@ else if($_SESSION['perfil']==1){
 }
 
 $voos= Data::get('voos');
-$origem= Data::get('origem');
-$destino= Data::get('destino');
+$origens= Data::get('origem');
+$destinos= Data::get('destino');
 ?>
 
 <head>
@@ -26,39 +26,25 @@ $destino= Data::get('destino');
 
 </head>
 
-<table id="#myTable">
-    <thead>
-    <tr>
-        <th>
-            ID do Voo
-        </th>
-        <th>
-            Preço
-        </th>
-        <th>
-            Origem
-        </th>
-        <th>
-            Destino
-        </th>
-    </tr>
-    </thead>
-    <tbody>
-    <?php foreach ($voos as $voo) { ?>
-    <tr>
-        <td><?=$voo->id_voo?></td>
-        <td><?=$voo->preco_voo?></td>
-            <? foreach($origem as $origem)
-            { ?>
-        <td><?=$origem->nome_aeroporto?></td>
-        <? foreach($destino as $destino){?>
-        <td><?=$destino->nome_aeroporto?></td>
-        }
-        }
-        <td><a href="<?= Url::toRoute('voo/edit',$voo->id_voo)?>">Edit</a> </td>
-        <td><a href="<?= Url::toRoute('voo/delete',$voo->id_voo)?>">Delete</a> </td>
+<?php
 
-    </tr>
-    </tbody>
-    <?php } ?>
-</table>
+    echo '<h1>Voos Disponiveis</h1>';
+    foreach ($voos as $voo){
+
+         foreach($origens as $origem)
+         {
+            foreach($destinos as $destino)
+            {
+                echo '<hr>';
+
+                echo 'Data de Compra: ' . $voo->id_voo;
+
+                echo '<br>Preço: ' . $voo->preco_voo;
+
+                echo '<br>Aeroporto de partida:' . $origem->nome_aeroporto;
+
+
+                echo '<br>Aeroporto de Chegada:'. $destino->nome_aeroporto;
+            }
+        }
+    }
