--- a/webapp/view/user/index.phtml
+++ b/webapp/view/user/index.phtml
@@ -1,3 +1,62 @@
 <?php
+use ArmoredCore\WebObjects\Asset;
+use ArmoredCore\WebObjects\Layout;
+use ArmoredCore\WebObjects\URL;
+use ArmoredCore\WebObjects\Data;
 
-echo "";
+$users=Data::get('users');
+?>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport"    content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author"      content="Silvio Priem Mendes, PhD">
+
+    <title>Weblogic MVC</title>
+
+
+    <link rel="shortcut icon" href="<?= Asset::image('gt_favicon.png')?>">
+    <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+    <!-- Custom styles for our site template -->
+    <link rel="stylesheet" href="<?= Asset::css('/bootstrap-theme.css')?>" media="screen" >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../layout/forms.css">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="<?= Asset::js('html5shiv.js')?>"></script>
+    <script src="<?= Asset::js('respond.min.js')?>"></script>
+    <![endif]-->
+</head>
+
+<body>
+<table>
+    <thead>
+    <th>Nome</th>
+    <th>Morada</th>
+    <th>Nif</th>
+    <th>Telefone</th>
+    <th>Nome de Utilizador</th>
+    <th>Perfil</th>
+    </thead>
+    <tbody>
+    <?php
+    foreach ($users as $user){
+    ?>
+        <tr>
+            <td><?=$user->nome?></td>
+            <td><?=$user->morada?></td>
+            <td><?=$user->nif?></td>
+            <td><?=$user->telefone?></td>
+            <td><?=$user->username?></td>
+            <td><?=$user->id_perfil?></td>
+        </tr>
+    <?php
+    }
+    ?>
+    </tbody>
+</table>
