--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,10 +5,10 @@
     height: 400px;
     width: 1920px;
 }
-#image2{
-    height: 400px;
-    width: 1920px;
-}
+/*#image2{*/
+/*    height: 400px;*/
+/*    width: 1920px;*/
+/*}*/
 #image3{
     height: 400px;
     width: 1920px;
