--- a/webapp/view/home/index.phtml
+++ b/webapp/view/home/index.phtml
@@ -39,7 +39,7 @@ $aeroportos= Data::get('aeroportos');
             </div>
 
             <div class="item">
-                <img id="image2" src="<?=Asset::image('chicago.jpg')?>" alt="Chicago">
+                <img id="image2" src="<?=Asset::image('parque.jpg')?>" alt="Parque">
             </div>
 
             <div class="item">
