--- a/webapp/view/escala/gestaoEscalas.phtml
+++ b/webapp/view/escala/gestaoEscalas.phtml
@@ -10,6 +10,9 @@ if(!isset($_SESSION['perfil'])){
 else if($_SESSION['perfil']==1){
     Layout::includeLayout('usernav');
 }
+else if($_SESSION['perfil']==3){
+    Layout::includeLayout('gestornav');
+}
 
 $escalas= Data::get('escalas');
 $origens= Data::get('origem');
@@ -22,16 +25,16 @@ $destinos= Data::get('destino');
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="<?= Asset::css('/escalas.css')?>">
+
 </head>
 
 <body>
 
-<?php
+<h1>Escalas</h1>
 
-echo '<h1>Escalas</h1>';
-?>
-<button href="<?= Url::toRoute('escala/')?>"class="btn btn-success">Inserir Escala</button>
-<form>
+<a href="<?= Url::toRoute('escala/create')?>"class="btn btn-success">Inserir Escala</a>
+
     <?php
     foreach ($escalas as $escala){
 
@@ -65,6 +68,6 @@ echo '<h1>Escalas</h1>';
         }
     }
     ?>
-</form>
+
 </body>
 
