--- a/webapp/view/layout/usernav.phtml
+++ b/webapp/view/layout/usernav.phtml
@@ -41,13 +41,16 @@ use ArmoredCore\WebObjects\URL;
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Voos Disponiveis <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="<?= URL::toRoute('home/index') ?>">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="<?= URL::toRoute('escala/ListarEscalas') ?>">Voos Disponiveis <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Procurar Voos</a>
+                <a class="nav-link" href="<?= URL::toRoute('escala/ListarEscalas') ?>">Procurar Voos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">PassagensCompradas</a>
+                <a class="nav-link" href="<?= URL::toRoute('passagemvenda/HistoricoPassagem') ?>">PassagensCompradas</a>
             </li>
         </ul>
 
