--- a/webapp/view/aeroporto/edit.phtml
+++ b/webapp/view/aeroporto/edit.phtml
@@ -2,7 +2,7 @@
 use ArmoredCore\WebObjects\ErrMgr;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
-
+Layout::includeLayout('adminnav');
 $aeroporto = Data::get('aeroporto') ?>
 
 <!DOCTYPE html>
