--- a/webapp/view/aeroporto/new.phtml
+++ b/webapp/view/aeroporto/new.phtml
@@ -2,6 +2,7 @@
 use ArmoredCore\WebObjects\ErrMgr;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
+Layout::includeLayout('adminnav');
 ?>
 
 <!DOCTYPE html>
