--- a/webapp/view/layout/operadornav.phtml
+++ b/webapp/view/layout/operadornav.phtml
@@ -25,8 +25,8 @@ use ArmoredCore\WebObjects\URL;
     <!-- Custom styles for our site template -->
     <link rel="stylesheet" href="<?= Asset::css('/bootstrap-theme.css') ?>" media="screen">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="<?= Asset::css('/navbar.css') ?>">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--<link rel="stylesheet" href="<?//Asset::css('/navbar.css') ?>">
+    HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="<?= Asset::js('html5shiv.js') ?>"></script>
     <script src="<?= Asset::js('respond.min.js') ?>"></script>
@@ -35,18 +35,18 @@ use ArmoredCore\WebObjects\URL;
 
 <body class="home">
 <!-- Fixed navbar -->
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul style="margin-left: 35%;font-size: 20px"class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Ver informações de voos<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="<?= URL::toRoute('passagemvenda/passagensCompradasNosUltimos15dias') ?>">Ver informações de voos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="<?= URL::toRoute('escala/ListarEscalas') ?>">Efetuar Check-In</a>
+                <a class="nav-link" href="<?= URL::toRoute('passagemvenda/fazerCheckin') ?>">Efetuar Check-In</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="<?= URL::toRoute('aeroporto/index')?>">Logout</a>
+                <a class="nav-link" href="<?= URL::toRoute('user/destroysession')?>">Logout</a>
             </li>
         </ul>
     </div>
