--- a/webapp/view/passagemvenda/fazerCheckin.phtml
+++ b/webapp/view/passagemvenda/fazerCheckin.phtml
@@ -4,6 +4,8 @@ use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
 use ArmoredCore\WebObjects\Data;
 
+Layout::includeLayout('operadornav');
+
 $passagens= Data::get('passagens');
 $origens= Data::get('origens');
 $destinos= Data::get('destinos');
