--- a/webapp/view/user/index.phtml
+++ b/webapp/view/user/index.phtml
@@ -5,6 +5,7 @@ use ArmoredCore\WebObjects\URL;
 use ArmoredCore\WebObjects\Data;
 
 $users=Data::get('users');
+Layout::includeLayout('adminnav');
 ?>
 
 <!DOCTYPE html>
