--- a/webapp/view/layout/adminnav.phtml
+++ b/webapp/view/layout/adminnav.phtml
@@ -25,8 +25,8 @@ use ArmoredCore\WebObjects\URL;
     <!-- Custom styles for our site template -->
     <link rel="stylesheet" href="<?= Asset::css('/bootstrap-theme.css') ?>" media="screen">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="<?= Asset::css('/navbar.css') ?>">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--<link rel="stylesheet" href="">
+     HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="<?= Asset::js('html5shiv.js') ?>"></script>
     <script src="<?= Asset::js('respond.min.js') ?>"></script>
@@ -35,10 +35,10 @@ use ArmoredCore\WebObjects\URL;
 
 <body class="home">
 <!-- Fixed navbar -->
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul style="margin-left: 30%" class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Contas de Operadores de Checkin <span class="sr-only">(current)</span></a>
             </li>
