--- a/webapp/view/layout/gestornav.phtml
+++ b/webapp/view/layout/gestornav.phtml
@@ -23,7 +23,7 @@ use ArmoredCore\WebObjects\URL;
     <!-- Custom styles for our site template -->
     <link rel="stylesheet" href="<?= Asset::css('/bootstrap-theme.css') ?>" media="screen">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="<?= Asset::css('/navbar.css') ?>">
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="<?= Asset::js('html5shiv.js') ?>"></script>
@@ -33,10 +33,10 @@ use ArmoredCore\WebObjects\URL;
 
 <body class="home">
 <!-- Fixed navbar -->
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul style="margin-left: 35%;font-size: 20px"class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="<?= URL::toRoute('voo/ListarVoos')?>">Gestão de Voos <span class="sr-only">(current)</span></a>
             </li>
