--- a/webapp/view/layout/nologinnav.phtml
+++ b/webapp/view/layout/nologinnav.phtml
@@ -42,14 +42,11 @@ use ArmoredCore\WebObjects\URL;
             <li class="nav-item active">
                 <a class="nav-link" href="#">Voos Disponiveis <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Procurar Voos</a>
-            </li>
 
         </ul>
         <ul class="navbar-nav mr-auto">
             <li><a class="btn btn-success" href="<?= URL::toRoute('user/login')?>">Entrar</a></li>
-            <li><a class="btn btn-success" href="<?= URL::toRoute('user/register')?>">Registar-se</a></li>
+            <li><a class="btn btn-success" href="<?= URL::toRoute('user/create')?>">Registar-se</a></li>
         </ul>
 
 
