--- a/webapp/view/passagemvenda/detalhesPassagens.phtml
+++ b/webapp/view/passagemvenda/detalhesPassagens.phtml
@@ -4,10 +4,12 @@ use ArmoredCore\WebObjects\Asset;
 use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
 use ArmoredCore\WebObjects\Data;
+Layout::includeLayout('operadornav');
 
 $passagens= Data::get('passagens');
 $origens= Data::get('origens');
 $destinos= Data::get('destinos');
+
 
 foreach ($passagens as $passagem){
 
